--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                 add_box
             </button>
             <hr>
+            <button class="icon-button hide-on-mobile" translate="no" title="Un-do" onclick="editor.undo();">
+                undo
+            </button>
+            <button class="icon-button hide-on-mobile" translate="no" title="Re-do" onclick="editor.redo();">
+                redo
+            </button>
+            <hr>
             <div class="dropdown">
                 <button class="icon-button" translate="no" onclick="toggleDropdown('insert-menu')" title="Insert">
                     attach_filearrow_drop_down
