--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button class="icon-button hide-on-mobile" translate="no" title="New document" onclick="createFile();">
                 add_box
             </button>
-            <hr>
+            <hr class="hide-on-mobile">
             <button class="icon-button hide-on-mobile" translate="no" title="Un-do" onclick="editor.undo();">
                 undo
             </button>
