--- a/settings.html
+++ b/settings.html
@@ -21,10 +21,11 @@
     <h3>Theme</h3>
 
     <div style="display: flex; gap: 10px; align-items: center;">
-        <button class="ball" style="background-color: #ffffff;" onclick="setSetting('theme', 'theme-light');loadSettings()"></button>
-        <button class="ball" style="background-color: #f5eacb;" onclick="setSetting('theme', 'theme-cream');loadSettings()"></button>
-        <button class="ball" style="background-color: #303030;" onclick="setSetting('theme', 'theme-dark');loadSettings()"></button>
-        <button class="ball" style="background-color: #1c1a17;" onclick="setSetting('theme', 'theme-cream-dark');loadSettings()"></button>
+        <button class="ball" style="background-color: #ffffff; color: #3c3c3c" onclick="setSetting('theme', 'theme-light');loadSettings()">Light</button>
+        <button class="ball" style="background-color: #f5eacb; color: #4b3a25" onclick="setSetting('theme', 'theme-cream');loadSettings()">Cream</button>
+        <button class="ball" style="background-color: #303030; color: #dddddd" onclick="setSetting('theme', 'theme-dark');loadSettings()">Dark</button>
+        <button class="ball" style="background-color: #1c1a17; color: #e0d6c0" onclick="setSetting('theme', 'theme-cream-dark');loadSettings()">Coffee</button>
+        <button class="ball" style="background-color: #ffffff; color: #000000" onclick="setSetting('theme', 'theme-epaper');loadSettings()">ePaper</button>
     </div>
 
     <h3>Fonts</h3>
