--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body class="theme-dark">
     <header class="window-title">
         <div class="header-left">
-            <button class="icon-button" translate="no" onclick="toggleSidebar('files-bar')"
+            <button class="icon-button" translate="no" onmousedown="toggleSidebar('files-bar')"
                 ondragenter="toggleSidebar('files-bar')" title="Documents">
                 side_navigation
             </button>
@@ -56,19 +56,19 @@
             </button>
             <hr>
             <div class="dropdown">
-                <button class="icon-button" translate="no" onclick="toggleDropdown('insert-menu')" title="Insert">
+                <button class="icon-button" translate="no" onmousedown="toggleDropdown('insert-menu')" title="Insert">
                     attach_filearrow_drop_down
                 </button>
                 <div class="dropdown-content menu align-left" id="insert-menu">
                     <button class="text-button"
-                        onclick="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Summary</button>
+                        onmouseup="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Summary</button>
                     <button class="text-button"
-                        onclick="promptTableSelector().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Table</button>
+                        onmouseup="promptTableSelector().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Table</button>
                     <hr>
-                    <button class="text-button" onclick="insertAtTop(getMeta()); hideAllMenus();">Document meta</button>
+                    <button class="text-button" onmouseup="insertAtTop(getMeta()); hideAllMenus();">Document meta</button>
                     <hr>
                     <button class="text-button"
-                        onclick="promptIframe().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Web
+                        onmouseup="promptIframe().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Web
                         embed</button>
                 </div>
             </div>
@@ -84,26 +84,26 @@
                 import_contacts
             </button>
             <div class="dropdown">
-                <button class="icon-button" translate="no" onclick="toggleDropdown('more-menu')" title="More options">
+                <button class="icon-button" translate="no" onmousedown="toggleDropdown('more-menu')" title="More options">
                     more_vert
                 </button>
                 <div class="dropdown-content menu" id="more-menu">
-                    <button class="text-button" onclick="createFile(); hideAllMenus()">New <kbd>Ctrl+N</kbd></button>
-                    <button class="text-button" onclick="importFile(); hideAllMenus()">Open <kbd>Ctrl+O</kbd></button>
-                    <button class="text-button" onclick="promptSaveFile(index); hideAllMenus()">Save
+                    <button class="text-button" onmouseup="createFile(); hideAllMenus()">New <kbd>Ctrl+N</kbd></button>
+                    <button class="text-button" onmouseup="importFile(); hideAllMenus()">Open <kbd>Ctrl+O</kbd></button>
+                    <button class="text-button" onmouseup="promptSaveFile(index); hideAllMenus()">Save
                         <kbd>Ctrl+S</kbd></button>
                     <hr>
                     <button class="text-button"
-                        onclick="promptMessageFromFile('settings.html'); hideAllMenus()">Settings
+                        onmouseup="showMessageFromFile('settings.html'); hideAllMenus()">Settings
                         <kbd>Ctrl+,</kbd></button>
                     <hr>
                     <button class="text-button"
-                        onclick="window.open('read.html?path=tutorial.md'); hideAllMenus()">Tutorial</button>
-                    <button class="text-button">Keyboard shortcuts <kbd>Ctrl+?</kbd></button>
-                    <button class="text-button" onclick="promptMessageFromFile('about.html'); hideAllMenus();">About
+                        onmouseup="window.open('read.html?path=tutorial.md'); hideAllMenus()">Tutorial</button>
+                    <button class="text-button" onmouseup="showMessageFromFile('shortcuts.html'); hideAllMenus();">Keyboard shortcuts <kbd>Ctrl+?</kbd></button>
+                    <button class="text-button" onmouseup="showMessageFromFile('about.html'); hideAllMenus();">About
                         Cohesion <kbd>F1</kbd></button>
                     <hr>
-                    <button class="text-button" onclick="deleteEmptyFiles(); hideAllMenus()">Clear empty files</button>
+                    <button class="text-button" onmouseup="deleteEmptyFiles(); hideAllMenus()">Clear empty files</button>
                 </div>
             </div>
         </div>
@@ -115,11 +115,16 @@
         <div id="files"></div>
     </div>
 
+    <div class="dropdown-content menu" id="editor-context-menu">
+
+    </div>
+
     <div class="main-wrapper">
         <textarea id="editor"></textarea>
         <div id="preview" class="preview"></div>
     </div>
 
+    <script src="script/internalLinkExtension.js"></script>
     <script src="script/showdown.js"></script>
     <script src="script/edittools.js"></script>
     <script src="script/insert.js"></script>
@@ -149,7 +154,10 @@
             }
         });
 
-        const converter = new showdown.Converter();
+        const converter = new showdown.Converter({
+            extensions: [internalLinkExtension]
+        });
+
         const preview = document.getElementById("preview");
 
         function renderEditor() {
@@ -180,7 +188,7 @@
                 if (preview.classList.contains("on")) {
                     updateMarkdown(instance.getValue());
                 }
-            }, 500);
+            }, 100);
         });
 
         function togglePreview() {
@@ -210,17 +218,6 @@
                 requestAnimationFrame(() => {
                     preview.scrollTop = scrollRatio * (preview.scrollHeight - preview.clientHeight);
                 });
-
-                // document.querySelectorAll("#preview a").forEach(link => {
-                //     const href = link.getAttribute("href") || "";
-                //     if (!href.startsWith("http") || href.startsWith("http:")) return;
-                //     const url = new URL(href);
-                //     const img = document.createElement("img");
-                //     img.className = "favicon";
-                //     img.alt = "Favicon";
-                //     img.src = `https://www.google.com/s2/favicons?sz=64&domain_url=${url.origin}`;
-                //     link.prepend(img);
-                // });
             }
         }
 
@@ -234,6 +231,32 @@
             let i = 0;
             markdown = markdown.replace(/\uFFFC/g, () => codeBlocks[i++]);
             preview.innerHTML = converter.makeHtml(markdown);
+
+            document.addEventListener('click', function (e) {
+                if (e.target.classList.contains('internal-link')) {
+                    e.preventDefault();
+                    const titleToFind = e.target.dataset.title;
+
+                    for (let i = 0; i < files.length; i++) {
+                        const text = getFileText(i);
+                        if (!text) continue;
+
+                        const conv = new showdown.Converter({ metadata: true });
+                        conv.makeHtml(text);
+                        const metadata = conv.getMetadata();
+
+                        if (metadata.title === titleToFind) {
+                            index = i;
+                            localStorage.setItem('lastIndex', index);
+                            renderFiles("files");
+                            renderEditor();
+                            editor.focus();
+                            break;
+                        }
+                    }
+                }
+            });
+
         }
 
         function getSummary(markdown) {
@@ -293,7 +316,7 @@
 
             else if (event.key === "F1") { // about - f1
                 event.preventDefault();
-                promptMessageFromFile('about.html');
+                showMessageFromFile('about.html');
             }
 
             else if (event.key === "F9") { // toggle sidepane - f9
@@ -302,7 +325,12 @@
             }
 
             else if (event.ctrlKey && event.key === ',') {
-                promptMessageFromFile('settings.html');
+                showMessageFromFile('settings.html');
+                hideAllMenus();
+            }
+
+            else if (event.ctrlKey && event.key === '?') {
+                showMessageFromFile('shortcuts.html');
                 hideAllMenus();
             }
 
