--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div id="preview" class="preview"></div>
     </div>
 
-    <script src="script/fileSystem.js"></script>
+    <script src="script/pocket.js"></script>
     <script src="script/internalLinkExtension.js"></script>
     <script src="script/showdown.js"></script>
     <script src="script/edittools.js"></script>
