--- a/shortcuts.html
+++ b/shortcuts.html
@@ -146,6 +146,12 @@
                                     </td>
                                     <td>Bold</td>
                                 </tr>
+                                <tr>
+                                    <td>
+                                        <kbd>Ctrl</kbd>+<kbd>;</kbd>
+                                    </td>
+                                    <td>Metadata</td>
+                                </tr>
                             </table>
                         </td>
                         <td>
@@ -282,6 +288,14 @@
                                 <tr>
                                     <td><kbd>Ctrl</kbd>+<kbd>G</kbd></td>
                                     <td>Go to line</td>
+                                </tr>
+                                <tr>
+                                    <td><kbd>Ctrl</kbd>+<kbd>F</kbd></td>
+                                    <td>Find</td>
+                                </tr>
+                                <tr>
+                                    <td><kbd>Ctrl</kbd>+<kbd>H</kbd></td>
+                                    <td>Find and replace</td>
                                 </tr>
                             </table>
                         </td>
