--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                         <label class="icon" for="search-field">search</label>
                         <input type="text" name="search-field" id="search-field" />
                     </div>
-                    <button id="search-prev-btn" class="icon-button button-group-member" title="Previous">arrow_upward</button>
-                    <button id="search-next-btn" class="icon-button button-group-member right" title="Next">arrow_downward</button>
+                    <button id="search-prev-btn" class="icon-button button-group-member" title="Previous">keyboard_arrow_up</button>
+                    <button id="search-next-btn" class="icon-button button-group-member right" title="Next">keyboard_arrow_down</button>
                     <button id="match-case-btn" class="icon-button button-group-member left" title="Match casing">match_case</button>
                     <button id="regex-btn" class="icon-button button-group-member" title="Regular expression">regular_expression</button>
                     <button class="icon-button button-group-member right" translate="no" title="Replace" onclick="toggleReplaceHeader()" id="replace-btn">find_replace</button>
@@ -135,7 +135,7 @@
                         <input type="text" name="replace-field" id="replace-field" />
                     </div>
                     <button id="replace-one-btn" class="text-button button-group-member left">Replace</button>
-                    <button id="replace-all-btn" class="text-button button-group-member right">Replace all</button>
+                    <button id="replace-all-btn" class="text-button button-group-member right">Rep. all</button>
                 </div>
             </header>
             <textarea id="editor"></textarea>
@@ -145,7 +145,7 @@
         <script src="script/pocket.js"></script>
         <script src="script/internalLinkExtension.js"></script>
         <script src="script/showdown.js"></script>
-        <script src="script/edittools.js"></script>
+        <script src="script/editorTools.js"></script>
         <script src="script/insert.js"></script>
         <script src="script/prompts.js"></script>
         <script src="script/file.js"></script>
