simplified audio & video insertion
audio and video can be now insert as images:
![video alt](pocket/video.mp4)

--- a/pocket.html
+++ b/pocket.html
@@ -118,9 +118,9 @@
             if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
                 filecontent = `![${name}](pocket/${name})`;
             } else if (["mp4", "webm", "ogg"].includes(ext)) {
-                filecontent = `<video controls src="pocket/${name}"></video>`;
+                filecontent = `![${name}](pocket/${name})`;
             } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
-                filecontent = `<audio controls src="pocket/${name}"></audio>`;
+                filecontent = `![${name}](pocket/${name})`;
             } else if (ext === "pdf") {
                 filecontent = `<iframe src="pocket/${name}"></iframe>`;
             } else {
