started better documentation

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <kbd>Ctrl+,</kbd>
                         </button>
                         <hr />
-                        <button class="text-button" onmouseup="window.open('read.html?path=tutorial.md'); hideAllMenus()">Tutorial</button>
+                        <button class="text-button" onmouseup="window.open('read.html?path=docs/index.md'); hideAllMenus()">Tutorial</button>
                         <button class="text-button" onmouseup="showMessageFromFile('shortcuts.html'); hideAllMenus();">
                             Keyboard shortcuts
                             <kbd>Ctrl+?</kbd>
