--- a/pocket.html
+++ b/pocket.html
@@ -1,51 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cohesion Pocket</title>
-
     <style>
         .fs-file-container {
             min-height: 200px;
-            max-height: 300px;
+            height: 50vh;
             overflow: scroll;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
         }
 
         .fsfile {
+            position: relative;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            padding-left: 10px;
-            padding-right: 10px;
+            justify-content: flex-end;
+            flex-direction: column;
+            padding: 10px;
             border-radius: 15px;
             background-color: var(--background-color-2);
             margin-bottom: 10px;
+            width: 200px;
+            height: 200px;
+            box-sizing: border-box;
+            transition: all 0.3s ease;
         }
 
         .fsfile .icon {
-            font-size: x-large;
+            font-size: 50pt;
+            display: block;
+            transition: all 0.3s ease;
+        }
+
+        .fsfile .file-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 5px;
+        }
+
+        .fsfile .dropdown {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        @media screen and (max-width: 800px) {
+            .fs-file-container {
+                flex-direction: column;
+            }
+
+            .fsfile {
+                width: 100%;
+                height: auto;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px;
+            }
+
+            .fsfile .icon {
+                font-size: 20pt;
+                margin-right: 10px;
+            }
+
+            .fsfile .file-info {
+                flex-direction: row;
+                align-items: center;
+                justify-content: flex-start;
+                gap: 10px;
+                margin-top: 0;
+            }
+
+            .fsfile .dropdown {
+                position: static;
+                margin-left: auto;
+            }
         }
     </style>
 </head>
 
 <body>
     <h2>Cohesion Pocket</h2>
-    <p>Connect files from your device for usage inside of Cohesion. The CFS runs and stores data locally, it's used to
-        link document resources.</p>
-    <div id="fs-file-container" class="fs-file-container">
-        <p style="text-align: center;">Files will appear here</p>
+    <p>Connect files from your device for usage inside of Cohesion.</p>
+    <p>You can use resources from your pocket by using the directory 'pocket/file.png'</p>
+
+    <div style="display: flex;align-items: center; gap: 2px; margin-bottom: 10px;">
+        <button class="text-button" onclick="uploadFSFile().then(() => renderFSFiles());">Add file</button>
+        <button class="text-button" onclick="renderFSFiles();">Refresh</button>
+        <button class="text-button danger" onclick="deleteAllFS().then(renderFSFiles());">Delete all data</button>
     </div>
-    <button class="text-button" onclick="uploadFSFile().then(renderFSFiles());">Add file</button>
-    <button class="text-button" onclick="renderFSFiles();">Refresh</button>
-    <button class="text-button danger" onclick="deleteAllFS().then(renderFSFiles());">Delete all data</button>
+
+    <div id="fs-file-container" class="fs-file-container">
+        <p style="text-align: center">Files will appear here</p>
+    </div>
 
     <script>
         async function renderFSFiles() {
-            const container = document.getElementById('fs-file-container');
+            const container = document.getElementById("fs-file-container");
             const files = await getFSFiles();
-
             container.innerHTML = "";
 
             for (let index = 0; index < files.length; index++) {
@@ -55,104 +111,102 @@
                 const div = document.createElement("div");
                 div.className = "fsfile";
                 div.innerHTML = `
-            <div style='display:flex;align-items:center;gap:10px;'>
-                <span class="icon">${icon}</span>
-                <h3>${file.name}</h3>
-            </div>
-            <div class="dropdown">
-                <button class="icon-button" translate="no" onmousedown="toggleDropdown('file${index}')">
-                    more_vert
-                </button>
-                <div class="dropdown-content menu" id="file${index}">
-                    <button class="text-button" onmouseup="copyPath('${file.name}'); hideAllMenus()">Copy path</button>
-                    <hr>
-                    <button class="text-button" onmouseup="handleRenameFSFile(${index}); hideAllMenus()">Rename</button>
-                    <button class="text-button" onmouseup="downloadFSFile('${file.name}'); hideAllMenus()">Download</button>
-                    <hr>
-                    <button class="text-button danger" onmouseup="deleteFSFile('${file.name}'); hideAllMenus(); renderFSFiles()">Delete</button>
-                </div>
-            </div>
-        `;
+                    <span class="icon">${icon}</span>
+                    <div class="file-info">
+                        <h3>${file.name}</h3>
+                        <div class="dropdown">
+                            <button class="icon-button" translate="no" onmousedown="toggleDropdown('file${index}')">
+                                more_vert
+                            </button>
+                            <div class="dropdown-content menu" id="file${index}">
+                                <button class="text-button" onmouseup="copyPath('${file.name}'); hideAllMenus()">Copy path</button>
+                                <hr>
+                                <button class="text-button" onmouseup="handleRenameFSFile(${index}); hideAllMenus()">Rename</button>
+                                <button class="text-button" onmouseup="downloadFSFile('${file.name}'); hideAllMenus()">Download</button>
+                                <hr>
+                                <button class="text-button danger" onmouseup="deleteFSFile('${file.name}'); hideAllMenus(); renderFSFiles()">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                `;
                 container.appendChild(div);
             }
         }
 
+            async function handleRenameFSFile(index) {
+                const files = await getFSFiles();
+                const current = files[index];
+                if (!current) return;
 
-        async function handleRenameFSFile(index) {
-            const files = await getFSFiles();
-            const current = files[index];
-            if (!current) return;
+                const newName = await promptString("Rename file", current.name);
+                if (!newName || newName === current.name) return;
 
-            const newName = await promptString("Rename file", current.name);
-            if (!newName || newName === current.name) return;
-
-            try {
-                await renameFSFile(index, newName);
-                await renderFSFiles();
-            } catch (err) {
-                console.error(err);
-                showToast("Failed to rename file", "error");
-            }
-        }
-
-        async function getIcon(fileName) {
-            const ext = fileName.split('.').pop().toLowerCase();
-            
-            let icon = "draft";
-
-            if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
-                icon = "image";
-            } else if (["mp4", "webm", "ogg"].includes(ext)) {
-                icon = "movie";
-            } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
-                icon = "album";
+                try {
+                    await renameFSFile(index, newName);
+                    await renderFSFiles();
+                } catch (err) {
+                    console.error(err);
+                    showToast("Failed to rename file", "error");
+                }
             }
 
-            return icon;
-        }
+            async function getIcon(fileName) {
+                const ext = fileName.split(".").pop().toLowerCase();
 
-        function copyPath(name) {
-            const ext = name.split('.').pop().toLowerCase();
-            let filecontent = "";
+                let icon = "draft";
 
-            if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
-                filecontent = `![${name}](pocket/${name})`;
-            } else if (["mp4", "webm", "ogg"].includes(ext)) {
-                filecontent = `![${name}](pocket/${name})`;
-            } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
-                filecontent = `![${name}](pocket/${name})`;
-            } else if (ext === "pdf") {
-                filecontent = `<iframe src="pocket/${name}"></iframe>`;
-            } else {
-                filecontent = `pocket/${name}`;
+                if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
+                    icon = "image";
+                } else if (["mp4", "webm", "ogg"].includes(ext)) {
+                    icon = "movie";
+                } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
+                    icon = "album";
+                } else if (["md", "txt", "pdf", "html"].includes(ext)) {
+                    icon = "description";
+                }
+
+                return icon;
             }
 
-            navigator.clipboard.writeText(filecontent).then(() => {
-                showToast("Copied to the clipboard", 'content_copy');
-            });
-        }
+            function copyPath(name) {
+                const ext = name.split(".").pop().toLowerCase();
+                let filecontent = "";
 
+                if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
+                    filecontent = `![${name}](pocket/${name})`;
+                } else if (["mp4", "webm", "ogg"].includes(ext)) {
+                    filecontent = `![${name}](pocket/${name})`;
+                } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
+                    filecontent = `![${name}](pocket/${name})`;
+                } else if (ext === "pdf") {
+                    filecontent = `<iframe src="pocket/${name}"></iframe>`;
+                } else {
+                    filecontent = `pocket/${name}`;
+                }
 
-        async function downloadFSFile(name) {
-            const content = await resolveFSItem(name);
-            if (!content) return;
+                navigator.clipboard.writeText(filecontent).then(() => {
+                    showToast("Copied to the clipboard", "content_copy");
+                });
+            }
 
-            const a = document.createElement("a");
-            a.href = content;
-            a.download = name;
-            a.click();
-        }
+            async function downloadFSFile(name) {
+                const content = await resolveFSItem(name);
+                if (!content) return;
 
-        async function deleteFSFile(name) {
-            const db = await openFSDB();
-            const tx = db.transaction("files", "readwrite");
-            tx.objectStore("files").delete(name);
-            await tx.done;
-        }
+                const a = document.createElement("a");
+                a.href = content;
+                a.download = name;
+                a.click();
+            }
 
-        renderFSFiles();
-    </script>
+            async function deleteFSFile(name) {
+                const db = await openFSDB();
+                const tx = db.transaction("files", "readwrite");
+                tx.objectStore("files").delete(name);
+                await tx.done;
+            }
 
-</body>
-
+            renderFSFiles();
+        </script>
+    </body>
 </html>
