--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <script src="codemirror/addon/edit/closebrackets.js"></script>
         <script src="codemirror/addon/edit/continuelist.js"></script>
         <script src="codemirror/addon/search/searchcursor.js"></script>
-        <link rel="stylesheet" href="codemirror/addon/dialog/dialog.css" />
     </head>
 
     <body class="theme-dark">
@@ -56,7 +55,10 @@
                         <hr />
                         <button class="text-button" onmouseup="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Summary</button>
                         <button class="text-button" onmouseup="promptTableSelector().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Table</button>
-                        <button class="text-button" onmouseup="insertAtTop(getMeta()); hideAllMenus();">Document meta <kbd>Ctrl+;</kbd></button>
+                        <button class="text-button" onmouseup="insertAtTop(getMeta()); hideAllMenus();">
+                            Document meta
+                            <kbd>Ctrl+;</kbd>
+                        </button>
                         <hr />
                         <button class="text-button" onmouseup="promptIframe().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Web embed</button>
                     </div>
@@ -140,6 +142,18 @@
             </header>
             <textarea id="editor"></textarea>
             <div id="preview" class="preview"></div>
+            <div class="status-bar">
+                <div class="status-bar-left">
+                    <div class="status-bar-item">
+                        <label id="cursorPosLabel">Ln 0, Col 0</label>
+                    </div>
+                </div>
+                <div class="status-bar-right">
+                    <div class="status-bar-item">
+                        <label id="documentSizeLabel">0 Characters, 0 Words</label>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="script/pocket.js"></script>
@@ -150,7 +164,6 @@
         <script src="script/prompts.js"></script>
         <script src="script/file.js"></script>
         <script src="script/settings.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>
         <script>
             window.addEventListener("storage", (event) => {
                 if (event.key === "markdownFiles") {
@@ -178,6 +191,9 @@
             });
 
             const preview = document.getElementById("preview");
+
+            const cursorPosLabel = document.getElementById("cursorPosLabel");
+            const documentSizeLabel = document.getElementById("documentSizeLabel");
 
             const searchField = document.getElementById("search-field");
             const replaceField = document.getElementById("replace-field");
@@ -238,15 +254,24 @@ Hit the <icon>attach_file</icon> button to insert fun things into your document!
             let debounceTimer;
 
             editor.on("change", (instance) => {
+                const cursor = instance.getCursor();
+                const content = instance.getValue();
+
+                cursorPosLabel.textContent = `Ln ${cursor.line + 1}, Col ${cursor.ch + 1}`;
+
+                const charCount = content.length;
+                const wordCount = content.trim().split(/\s+/).filter(Boolean).length;
+                documentSizeLabel.textContent = `${charCount} Characters, ${wordCount} Words`;
+
                 clearTimeout(debounceTimer);
                 debounceTimer = setTimeout(() => {
-                    updateFile(instance.getValue(), index);
+                    updateFile(content, index);
                     saveFilesToStorage();
                     renderFiles("files");
                     document.getElementById("filename").innerText = getFileTitle(index) || "New document";
                     document.title = getFileTitle(index) || "New document - Cohesion";
                     if (preview.classList.contains("on")) {
-                        updateMarkdown(instance.getValue());
+                        updateMarkdown(content);
                     }
                 }, 100);
             });
@@ -574,7 +599,7 @@ Hit the <icon>attach_file</icon> button to insert fun things into your document!
                     hideAllMenus();
                 } else if (event.altKey && event.key === "p") {
                     event.preventDefault();
-                    showMessageFromFile('pocket.html', true, true);
+                    showMessageFromFile("pocket.html", true, true);
                     hideAllMenus();
                 } else if (event.altKey && /^[0-9]$/.test(event.key)) {
                     event.preventDefault();
